--- a/calender.css
+++ b/calender.css
@@ -6,7 +6,8 @@
     background-color: rgb(219, 144, 144);
     position: absolute;
     left: 10%;
-    bottom: -2%;
+    top: 74%;
+    bottom: -5%;
     padding: 4rem;
 }
 .calender-top{
