--- a/style.css
+++ b/style.css
@@ -123,14 +123,14 @@
   /* Header Banner */
   .hb-container {
     width: 100%;
-    height: 75vh;
+    /* height: 75vh; */
     background-color: white;
     position: relative;
   }
   
   .hb-main {
     width: 100%;
-    height: 94%;
+    height: 701px;
     background-image: url(https://imgs.search.brave.com/oexMJ7EMhs65BaovmK8l7SNPp4OqNMnJIG6doccgvm8/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly90NC5m/dGNkbi5uZXQvanBn/LzA0Lzk0LzA5LzI5/LzM2MF9GXzQ5NDA5/MjkzMF9mc0pVQnBt/aWk0T3NuV0N4eVNo/MXdTMHhzOTRXejlR/ai5qcGc);
     border-radius: 36px;
     overflow: hidden;
