--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@
   
   .hb-main {
     width: 100%;
-    height: 701px;
+    height: 70vh;
     background-image: url(https://imgs.search.brave.com/oexMJ7EMhs65BaovmK8l7SNPp4OqNMnJIG6doccgvm8/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly90NC5m/dGNkbi5uZXQvanBn/LzA0Lzk0LzA5LzI5/LzM2MF9GXzQ5NDA5/MjkzMF9mc0pVQnBt/aWk0T3NuV0N4eVNo/MXdTMHhzOTRXejlR/ai5qcGc);
     border-radius: 36px;
     overflow: hidden;
